[package]
name = "hello_world"
version = "0.0.1"
authors = ["Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "hello_world"

[dependencies]
rustc_version_runtime = "0.1.*"
amethyst = { version = "0.15.3", features = ["vulkan"] }
log = { version = "^0.4", features = ["serde"] }
serde = "^1"
derivative = "^2"
lazy_static = "^1.4"
serde-diff = "0.4"
type-uuid = "0.1"
glsl-layout = "0.4"
ron = "^0.6"
legion-prefab = { git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }
prefab-format = { git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }